fixed spacing issues on contact page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -692,9 +692,9 @@ color: white;
 .pcontentbot button {
   margin-top: 3vh;
   padding: 1vh 1.5vw 1vh 1.5vw;
-  background-color: #9370DB;
+  background-color: #ff6749;
   border-radius: 5px;
-  border-color: #9370DB;
+  border-color: #ff6749;
   border-width: 1px;
   font-size: 16px;
   font-weight: bold;
